Fix bug of streched harry potter logo on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,6 @@ a {
 
 .logo {
     width: 5rem;
-    height: fit-content;
     cursor: pointer;
     display: block;
     margin-left: auto;
